# python-ai-agent

./: .gitignore  README.md  docker-compose.yml  enterprise-rag-api-design.md  enterprise-rag-database-design.md  enterprise-rag-execution-plan.md  enterprise-rag-frontend-ia.md  pyproject.toml  sample-upload-test.md  studyDev.md
app/: main.py
app/api/: auth.py  chat.py  rag.py
app/core/: auth.py  database.py  embeddings.py  llm.py
app/core/__pycache__/: memory.cpython-311.pyc.2210424338160
app/core/rag/: indexer.py  loader.py  retriever.py
app/models/: schemas.py
backend/: .env.example  README.md
backend/app/: main.py
backend/app/api/: auth.py  chat.py  deps.py  knowledge.py  organization.py  rag.py
backend/app/core/: access.py  auth.py  database.py  embeddings.py  llm.py  paths.py
backend/app/core/rag/: indexer.py  loader.py  retriever.py
backend/app/models/: __init__.py  department.py  knowledge.py  user.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: http.ts
frontend/src/api/modules/: auth.ts  knowledge.ts  organization.ts  rag.ts
frontend/src/components/layout/: AppHeader.vue  AppSidebar.vue
frontend/src/layouts/: AppLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/styles/: base.css
frontend/src/types/: auth.ts  knowledge.ts  organization.ts  rag.ts
frontend/src/utils/: storage.ts
frontend/src/views/: OnboardingView.vue
frontend/src/views/approvals/: ApprovalCenterView.vue
frontend/src/views/auth/: LoginView.vue  RegisterView.vue
(+7 files in other folders)
